samples/_failures_safe/1761082098_8f7e2b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1a41b256.c: In function ‘main’:
./samples/SAFE/__tmp_1a41b256.c:142:13: error: expected declaration or statement at end of input
  142 |             continue;
      |             ^~~~~~~~
./samples/SAFE/__tmp_1a41b256.c:142:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1a41b256.c:142:13: error: expected declaration or statement at end of input
